# glaciera

./: .clang-format  .gitignore  CONFIG.md  CREDITS.md  INSTALL  INSTALL.md  MIGRATION.md  Makefile  Makefile.orig  README  README.macosx  README.md  common.c  common.h  flaws  generate_git_version_c.sh  generate_svnversion_c.sh  global_glacierarc  global_mp3bergrc  log.txt  meson.build  meson.options  messages.po  minimalistic-makefile  mod_flac.c  mod_mp3.c  mod_ogg.h  mod_template.c  mp3berg.c  mp3bergrc  mp3build.c  music.c  profile.sh  rippers  scanbuild.sh  sizes.c  snyk-report.txt  startmp3berg  svn_version.h
debian/: README  changelog  copyright
debian/.svn/: entries
debian/.svn/text-base/: control.svn-base  rules.svn-base
docs/.svn/: entries
html/: mp3berg.html  style.css
html/.svn/: entries
html/.svn/text-base/: love_thumb.png.svn-base  mp3berg.html.svn-base
meson/: git_version.c.in
mp3berg.xcodeproj/: plux.perspectivev3
mp3berg.xcodeproj/.svn/: entries
mp3berg.xcodeproj/.svn/text-base/: plux.pbxuser.svn-base  project.pbxproj.svn-base
src/: common.c  common.h  config.c  config.h  db.c  db.h  git_version.h  glaciera-indexer.c  glaciera.c  meson.build  mod_flac.c  mod_flac.h  mod_mp3.c  mod_mp3.h  mod_ogg.c  mod_ogg.h  mod_pls.c  mod_pls.h  mod_template.c  mp3berg.c  mp3build.c  music.c  music.h  searchmp3berg.c  theme_preview.c  theme_preview.h  toml.c  toml.h
themes/: glitchdream.toml  gruvbox.toml  nord.toml
